# Tinyt_agentic_from_scratch

./: .env  .env.example  .replit  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS.md  LICENSE  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  agents.js  api_client.py  app.js  cli_interface.py  config.py  demo_scenarios.py  docker-compose.yml  example_usage.py  improved_web_app.py  index.html  main.py  main_improved.py  pyproject.toml  replit.nix  requirements.txt  styles.css  web_interface.py  workflow_orchestrator.py
agents/: __init__.py  base_agent.py  context_schema_generator.py  dynamic_focus_group.py  persona_generator.py  qa_assistant.py  summary_agent.py
deployment/: gunicorn_config.py
monitoring/: __init__.py  health_check.py
scripts/: deploy_replit.py  setup.sh
static/: app.js  index.html  styles.css
templates/: base.html  dashboard.html  personas.html
tests/: test_workflow.py
utils/: __init__.py  validators.py
