[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-focus-group-workflow"
version = "0.1.0"
description = "Agentic Focus Group Workflow with LLM-powered agents and Flask API"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "aiohttp>=3.9.0",
  "python-dotenv>=1.0.0",
  "tinytroupe>=0.5.0",
]

